--- a/HidClient/HidClient.csproj
+++ b/HidClient/HidClient.csproj
@@ -16,6 +16,7 @@
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageTags>usb hid</PackageTags>
         <PackageReadmeFile>Readme.md</PackageReadmeFile>
+        <PackageIcon>icon.jpg</PackageIcon>
 
         <TargetFramework>netstandard2.0</TargetFramework>
         <Nullable>enable</Nullable>
@@ -31,6 +32,7 @@
     <ItemGroup>
         <None Remove="ExceptionAdjustments.txt" />
         <None Include="..\Readme.md" Pack="true" PackagePath="\" />
+        <None Include="icon.jpg" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
