--- a/.github/workflows/dotnetpackage.yml
+++ b/.github/workflows/dotnetpackage.yml
@@ -42,7 +42,8 @@ jobs:
       uses: coverallsapp/github-action@648a8eb78e6d50909eff900e4ec85cab4524a45b
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: Tests/TestResults/coverage.info
+        file: Tests/TestResults/coverage.info
+        format: lcov
 
     - name: Stop if tests failed
       run: exit $env:TEST_EXIT_CODE
