--- a/HidClient/HidClient.csproj
+++ b/HidClient/HidClient.csproj
@@ -8,7 +8,7 @@
         <PackageId>HidClient</PackageId>
         <Product>HidClient</Product>
         <Description>Common library class to receive updates from a USB HID and reconnect automatically when disconnected</Description>
-        <Copyright>© 2024 Ben Hutchison</Copyright>
+        <Copyright>© 2025 Ben Hutchison</Copyright>
         <PackageProjectUrl>https://github.com/Aldaviva/HidClient</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Aldaviva/HidClient.git</RepositoryUrl>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -30,13 +30,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Remove="ExceptionAdjustments.txt" />
-        <None Include="..\Readme.md" Pack="true" PackagePath="\" />
-        <None Include="icon.jpg" Pack="true" PackagePath="\" />
-    </ItemGroup>
-
-    <ItemGroup>
+        <None Include="..\Readme.md;icon.jpg" Pack="true" PackagePath="\" />
+        <None Include="..\.github*\**" />
         <AdditionalFiles Include="ExceptionAdjustments.txt" />
+        <InternalsVisibleTo Include="Tests" />
     </ItemGroup>
 
     <ItemGroup>
@@ -48,7 +45,4 @@
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     </PropertyGroup>
 
-    <ItemGroup>
-        <InternalsVisibleTo Include="Tests" />
-    </ItemGroup>
 </Project>
